<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F0E1"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageLayout" />

    <EditText
        android:id="@+id/edDesc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/description"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/fbSave"
        android:contextClickable="false"
        android:onClick="onClickSave"
        app:backgroundTint="#3972A1"
        app:layout_constraintBottom_toBottomOf="@+id/edDesc"
        app:layout_constraintEnd_toEndOf="@+id/edDesc"
        app:srcCompat="@drawable/ic_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/fbEdit"
        android:onClick="onEditEnable"
        app:backgroundTint="#3972A1"
        app:layout_constraintBottom_toBottomOf="@+id/edDesc"
        app:layout_constraintStart_toStartOf="@+id/edDesc"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:onClick="exitActivity"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/fbAddImage"
        android:onClick="onClickAddImage"
        app:backgroundTint="#3972A1"
        app:layout_constraintBottom_toBottomOf="@+id/edDesc"
        app:layout_constraintEnd_toStartOf="@+id/fbSave"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myImageLayout"
        android:layout_width="0dp"
        android:layout_height="221dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitButton">

        <ImageView
            android:id="@+id/imMyImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@android:drawable/editbox_background"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/fbEdit"
            android:onClick="onClickChooseImage"
            app:layout_constraintEnd_toEndOf="@+id/imMyImage"
            app:layout_constraintTop_toTopOf="@+id/imMyImage"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/imButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/fbDelete"
            android:onClick="onClickDelete"
            app:layout_constraintBottom_toBottomOf="@+id/imMyImage"
            app:layout_constraintEnd_toEndOf="@+id/imMyImage"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>